fix 2nd notebook

--- a/2_Qualification Validé Nico.ipynb
+++ b/2_Qualification Validé Nico.ipynb
@@ -598,12 +598,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "A5lsDxFT9FKD",
     "outputId": "b0ffe543-7870-48a0-f1d7-d3c1b0b9a82e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3.1581918000000004, (6068,))"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.percentile(err_vec, 80),y_pred_lat.shape\n",
     "#Ref : 3.1226744\n",
@@ -613,12 +624,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "id": "N8GHbFqg9FKE",
     "outputId": "a84c0114-d6d0-4bc8-eed8-ca655f83429f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.2016486"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "r1 = RandomForestRegressor(**get_hyperparameter('RandomForestRegressor', 'lng'))\n",
     "r3 = ExtraTreeRegressor(**get_hyperparameter('ExtraTreeRegressor', 'lng'))\n",
@@ -626,7 +648,7 @@
     "y_pred_lng = cross_val_predict(Vr, df_feat, y_full.lng, cv=3)\n",
     "\n",
     "r1 = RandomForestRegressor(**get_hyperparameter('RandomForestRegressor', 'lat'))\n",
-    "r3 = ExtraTreesRegressor(**get_hyperparameter('ExtraTreeRegressor', 'lat'))\n",
+    "r3 = ExtraTreeRegressor(**get_hyperparameter('ExtraTreeRegressor', 'lat'))\n",
     "Vr = VotingRegressor(estimators=[('Et',r3),('Gb', r1)])\n",
     "y_pred_lat = cross_val_predict(Vr, df_feat, y_full.lat, cv=3)\n",
     "\n",
@@ -645,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "id": "8l3zJaLR9FKF"
    },
@@ -654,7 +676,7 @@
     "r1 = RandomForestRegressor(**get_hyperparameter('RandomForestRegressor', 'lng'))\n",
     "r2 = GradientBoostingRegressor(**get_hyperparameter('GradientBoostingRegressor', 'lng'))\n",
     "r3 = ExtraTreeRegressor(**get_hyperparameter('ExtraTreeRegressor', 'lng'))\n",
-    "r4 = xgb.XGBRegressor(**get_hyperparameter('XGBoostRegressor', 'lng'))\n",
+    "r4 = xgb.XGBRegressor(**get_hyperparameter('XGBRegressor', 'lng'))\n",
     "r5 = BaggingRegressor(**get_hyperparameter('BaggingRegressor', 'lng'))\n",
     "Vr_lng = VotingRegressor(estimators=[('Et',r1),('Rf',r2),('Gb',r3),('Xg',r4),('Xdg',r5)])\n",
     "y_pred_lng = cross_val_predict(Vr_lng, df_feat, y_full.lng, cv=3)"
@@ -662,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "id": "sm4HvDgg9FKH"
    },
@@ -671,7 +693,7 @@
     "r1 = RandomForestRegressor(**get_hyperparameter('RandomForestRegressor', 'lat'))\n",
     "r2 = GradientBoostingRegressor(**get_hyperparameter('GradientBoostingRegressor', 'lat'))\n",
     "r3 = ExtraTreeRegressor(**get_hyperparameter('ExtraTreeRegressor', 'lat'))\n",
-    "r4 = xgb.XGBRegressor(**get_hyperparameter('XGBoostRegressor', 'lat'))\n",
+    "r4 = xgb.XGBRegressor(**get_hyperparameter('XGBRegressor', 'lat'))\n",
     "r5 = BaggingRegressor(**get_hyperparameter('BaggingRegressor', 'lat'))\n",
     "Vr_lat = VotingRegressor(estimators=[('Et',r1),('Rf',r2),('Gb',r3),('Xg',r4),('Xdg',r5)])\n",
     "y_pred_lat = cross_val_predict(Vr_lat, df_feat, y_full.lat, cv=3)"
@@ -688,12 +710,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "id": "AJ-5blrE9FKI",
     "outputId": "2f17c5e5-963a-4086-f688-5b1d627f213c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.127853000000001"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "err_vec = Eval_geoloc(y_full.lat , y_full.lng, y_pred_lat, y_pred_lng)\n",
     "np.percentile(err_vec, 80)"
