anti slash fixed

--- a/2_Qualification.ipynb
+++ b/2_Qualification.ipynb
@@ -6,10 +6,10 @@
     "id": "s5azQn28ygZC"
    },
    "source": [
-    "Projet réalisé par :\\\n",
-    "Mahmoud Benboubker\\\n",
-    "Nicolas Calligaro\\\n",
-    "Aïcha Lalhou\n"
+    "Projet réalisé par :  \n",
+    "Mahmoud Benboubker  \n",
+    "Nicolas Calligaro  \n",
+    "Aïcha Lalhou  \n"
    ]
   },
   {
