--- a/3_BaseStation.ipynb
+++ b/3_BaseStation.ipynb
@@ -6,10 +6,10 @@
     "id": "pogPGvyyzkJO"
    },
    "source": [
-    "Projet réalisé par :\\\n",
-    "Mahmoud Benboubker\\\n",
-    "Nicolas Calligaro\\\n",
-    "Aïcha Lalhou"
+    "Projet réalisé par :  \n",
+    "Mahmoud Benboubker  \n",
+    "Nicolas Calligaro  \n",
+    "Aïcha Lalhou  \n"
    ]
   },
   {
@@ -761,11 +761,11 @@
    "source": [
     "## Algo : pour corriger les coordonnées de ces bases outliers :\n",
     "\n",
-    "1- Identifier les bases Outliers\\\n",
-    "2- Identifier les messages étant captés par ces bases\\\n",
-    "3- Produire le DataFrame avec des messages mais sans les bases\\\n",
-    "4- Calculer le BaryCentre pondéré de tous les messages\\\n",
-    "5- Dans le DataFrame principal, pour chaque base, prendre la moyenne de tous les BaryCentres calculés\\\n",
+    "1- Identifier les bases Outliers  \n",
+    "2- Identifier les messages étant captés par ces bases  \n",
+    "3- Produire le DataFrame avec des messages mais sans les bases  \n",
+    "4- Calculer le BaryCentre pondéré de tous les messages  \n",
+    "5- Dans le DataFrame principal, pour chaque base, prendre la moyenne de tous les BaryCentres calculés  \n",
     "6- Mettre à jour les coordonées avec ce point"
    ]
   },
@@ -1039,7 +1039,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
