--- a/6_Device_Selection.ipynb
+++ b/6_Device_Selection.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Projet réalisé par :  \n",
+    "Mahmoud Benboubker  \n",
+    "Nicolas Calligaro  \n",
+    "Aïcha Lalhou  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Notebook 6 : Selection de Device"
    ]
   },
