--- a/4_Rssi.ipynb
+++ b/4_Rssi.ipynb
@@ -6,10 +6,10 @@
     "id": "7CQaj-HZzmmQ"
    },
    "source": [
-    "Projet réalisé par :\\\n",
-    "Mahmoud Benboubker\\\n",
-    "Nicolas Calligaro\\\n",
-    "Aïcha Lalhou"
+    "Projet réalisé par :  \n",
+    "Mahmoud Benboubker  \n",
+    "Nicolas Calligaro  \n",
+    "Aïcha Lalhou  \n"
    ]
   },
   {
@@ -942,7 +942,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
